fix: modal's move button visibility on mouse-over

--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -838,6 +838,11 @@ a:hover {
 
 .modal-gallery-move-btn {
     padding: 2px;
+    opacity: 0;
+}
+
+.modal-gallery-move-btn.is-active {
+    opacity: 1;
 }
 
 .modal-head {
